en_US translation

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,62 +1,62 @@
 {
     "plugins\/kring\/desktop\/js\/kring.js": {
         "Code de vérification": "Verification code",
-        "Nom d'utilisateur Ring.com (email)": "Ring.com username(email)",
+        "Nom d\\'utilisateur Ring.com (email)": "Ring.com username (email)",
         "Mot de passe Ring.com": "Ring.com password",
         "Annuler": "Cancel",
-        "Un code de vérification a été envoyé sur :": "Un code de vérification a été envoyé sur :",
-        "Synchronisation réussie": "Synchronisation réussie",
-        "équipement(s) trouvé(s)": "équipement(s) trouvé(s)",
-        "Merci de raffraichir la page": "Merci de raffraichir la page",
-        "Authentification réussie": "Authentification réussie",
-        "Opération réalisée avec succès": "Opération réalisée avec succès",
-        "Recharge configuration": "Recharge configuration",
-        "Recharger la configuration": "Recharger la configuration",
-        "Sélectionner le mode de rechargement de la configuration": "Sélectionner le mode de rechargement de la configuration",
-        "Sans recréer les commandes mais en créeant les manquantes": "Sans recréer les commandes mais en créeant les manquantes",
-        "En recréant les commandes": "En recréant les commandes",
-        "Attention, \"en recréant les commandes\" va supprimer les commandes existantes.": "Attention, \"en recréant les commandes\" va supprimer les commandes existantes.",
-        "Etes-vous sûr de vouloir récréer les commandes ? Cela va supprimer les commandes existantes": "Etes-vous sûr de vouloir récréer les commandes ? Cela va supprimer les commandes existantes",
-        "Icône": "Icône",
-        "La valeur de la commande vaut par défaut la commande": "La valeur de la commande vaut par défaut la commande",
-        "Afficher": "Afficher",
-        "Historiser": "Historiser",
-        "Inverser": "Inverser",
-        "Unité": "Unité",
+        "Un code de vérification a été envoyé sur :": "A verification code will be sent to:",
+        "Synchronisation réussie": "Synchronization success",
+        "équipement(s) trouvé(s)": "Device(s) found",
+        "Merci de raffraichir la page": "Thanks to refresh page",
+        "Authentification réussie": "Successfull logon",
+        "Opération réalisée avec succès": "Operation success",
+        "Recharge configuration": "Reload configuration",
+        "Recharger la configuration": "Reload configuration",
+        "Sélectionner le mode de rechargement de la configuration": "Select the configuration reload mode",
+        "Sans recréer les commandes mais en créeant les manquantes": "Without commands recreation but creating news",
+        "En recréant les commandes": "Recreating commands",
+        "Attention, \"en recréant les commandes\" va supprimer les commandes existantes.": "Warning: \"Recreating commands\" will delete existing commands",
+        "Etes-vous sûr de vouloir récréer les commandes ? Cela va supprimer les commandes existantes": "Are you sure you want recreate commands? This will delete all existing commands",
+        "Icône": "Icon",
+        "La valeur de la commande vaut par défaut la commande": "The command value equals the command by default",
+        "Afficher": "Display",
+        "Historiser": "History",
+        "Inverser": "Inverse",
+        "Unité": "Unit",
         "Min": "Min",
         "Max": "Max",
-        "Tester": "Tester"
+        "Tester": "Test"
     },
     "plugins\/kring\/desktop\/php\/kring.php": {
-        "401 - Accès non autorisé": "401 - Accès non autorisé",
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
+        "401 - Accès non autorisé": "401 - Unauthorized access",
+        "Rechercher": "Seach",
+        "Gestion": "Management",
         "Identifier mes équipements": "Identify devices",
         "Configuration": "Configuration",
-        "Mes périphériques": "Mes périphériques",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
+        "Mes périphériques": "My devices",
+        "Sauvegarder": "Save",
+        "Supprimer": "Delete",
+        "Configuration avancée": "Advance configuration",
+        "Equipement": "Device",
+        "Commandes": "Commands",
+        "Nom de l'équipement": "Device name",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Activate",
         "Visible": "Visible",
-        "Identifiant Equipement": "Identifiant Equipement",
+        "Identifiant Equipement": "Device Id",
         "Type": "Type",
-        "Equipements liés": "Equipements liés",
-        "Recharger les commandes": "Recharger les commandes",
-        "Charger toutes les commandes": "Charger toutes les commandes",
-        "Nom": "Nom",
-        "Paramètres": "Paramètres",
+        "Equipements liés": "Linked device",
+        "Recharger les commandes": "Relead commands",
+        "Charger toutes les commandes": "Relead all commands",
+        "Nom": "Name",
+        "Paramètres": "Parameters",
         "Options": "Options",
         "Action": "Action"
     },
     "plugins\/kring\/plugin_info\/configuration.php": {
-        "S'identifier": "S'identifier",
-        " Demander code": " Demander code"
+        "S'identifier": "Login",
+        " Demander code": "Ask code"
     }
 }
